--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6",
+    "nuxt": "^2.14.11",
     "nuxt-fontawesome": "^0.4.0",
     "prism-themes": "^1.5.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
+    "@nuxt/typescript": "^2.8.1",
     "@nuxt/typescript-build": "^2.0.3"
   }
 }
