--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@nuxt/content-theme-docs": "^0.7.2",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
-    "bootstrap": "^4.5.2",
+    "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/sitemap": "^2.4.0",
+    "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.11",
