--- a/.gitignore
+++ b/.gitignore
@@ -70,9 +70,6 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# Nuxt generate
-dist
-
 # vuepress build output
 .vuepress/dist
 
@@ -90,3 +87,6 @@ sw.*
 
 # Vim swap files
 *.swp
+
+# dist
+dist
